--- a/Task_1.ipynb
+++ b/Task_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNdChgapDh1M+s4ZOUoBNeJ",
+      "authorship_tag": "ABX9TyOplf0bs5y8yNc62O2ORX7Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
       "metadata": {
         "id": "Kno9Wny0m5bB"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -131,7 +131,7 @@
       "metadata": {
         "id": "4J3VECuke_7e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -159,7 +159,7 @@
         "id": "syb6zMh4nXL0",
         "outputId": "7fed78cf-fe24-48d8-b340-65d574198039"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,7 +213,7 @@
         "id": "2LcTL9cnPYVM",
         "outputId": "eb959398-c9fc-4ae3-cbe6-e9f4a26c2d68"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -275,6 +275,25 @@
         "        self.ops.append(gate)\n",
         "\n",
         "\n",
+        "    def add_CNOT(self, control_qubit, target_qubit):\n",
+        "      stack_l = []\n",
+        "      stack_r = []\n",
+        "      if control_qubit == target_qubit:\n",
+        "        raise ValueError(\"Control and target qubits cannot be the same.\")\n",
+        "      for i in range(self.num_qubits):\n",
+        "\n",
+        "          if i == control_qubit:\n",
+        "              stack_l.append(P0)\n",
+        "              stack_r.append(P1)\n",
+        "          else:\n",
+        "              stack_l.append(I)\n",
+        "              stack_r.append(I)\n",
+        "      stack_r[target_qubit] = X\n",
+        "\n",
+        "      cx = tensor(stack_l) +tensor(stack_r)\n",
+        "      self.ops.append(cx)\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -290,7 +309,7 @@
       "metadata": {
         "id": "faQx-3Br_zxT"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -320,7 +339,7 @@
         "id": "eVqeaydOT3tD",
         "outputId": "ca776af5-a84f-4cbc-848c-a50bc85d066f"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -375,7 +394,7 @@
         },
         "outputId": "7add8e6f-cc57-438d-e579-c1d181d178ab"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
